# g2o

./: CMakeLists.txt  README.md
g2o/core/: base_multi_edge.hpp  base_vertex.h  hyper_graph.h  optimizable_graph.h  optimization_algorithm_with_hessian.cpp  optimization_algorithm_with_hessian.h
g2o/examples/: CMakeLists.txt
g2o/examples/mpcr/: CMakeLists.txt  multiple_point_clouds_registration.cpp
g2o/solvers/cholmod/: CMakeLists.txt
g2o/types/icp/: types_icp.h
g2o/types/sba/: CMakeLists.txt  edge_se3_expmap_prior.cpp  edge_se3_expmap_prior.h  types_six_dof_expmap.cpp  types_six_dof_expmap.h
